bank code with function

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <div class="bg-amber-400 p-8 rounded-lg">
             <h3 class="text-4xl text-white mb-4">Your Withdraw</h3>
             <input
+              id="withdraw-field"
               class="w-3/4 px-4 py-3 rounded-lg block"
               type="text"
               placeholder="$ Amount you want to deposit"
@@ -60,12 +61,14 @@
               id="btn-withdraw"
               class="bg-blue-800 px-6 py-2 text-white font-medium rounded-lg hover:bg-blue-600 mt-4"
             >
-              Deposit
+              Withdraw
             </button>
           </div>
         </div>
       </section>
+      <script src="js/utilities.js"></script>
       <script src="js/deposit.js"></script>
+      <script src="js/withdraw.js"></script>
     </main>
   </body>
 </html>
